--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="index.html" style="background-color:white;color:black;">Home</a>
                 </li>
                 <li>
-                    <a href="struct.html">Structure</a>
+                    <a href="struct.html">Structures</a>
                 </li>
                 <li>
                     <a href="variables.html">Variables</a>
