--- a/laptop.html
+++ b/laptop.html
@@ -72,16 +72,23 @@
                     <div class="col-lg-12">
                         
                         <h1>The Laptop</h1>
-                        <p>This website is a simple page to help you figure out the simple Java code and hints that you will need to start coding Java. For people who already know how to code, this website may serve as a quick reference or as a way to translate your current code into Java.</p>
-                        <p>Thank you to <a href="http://startbootstrap.com/">Start Bootstrap</a> for the theme.</p>
+                        <p></p>
+                        <span><button onclick="test()" class="btn btn-lg btn-primary" id="submitbutton" style="margin-bottom:5px;">Who Will Win the Laptop?</button>
+                            <img src="" id="chrispic"/>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle" style="position:fixed; bottom:20px; right:20px;">Toggle Menu</a>
+                        <script>
+                            function test()
+                            {
+                                var snd = new Audio("sound/tada.mp3");
+                                snd.play();
+                                document.getElementById("chrispic").setAttribute("src","img/chris.jpg");
+                            }
+                            </script>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
-
-    </div>
     <!-- /#wrapper -->
 
     <!-- jQuery -->
@@ -89,7 +96,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
     <!-- Menu Toggle Script -->
     <script>
     $("#menu-toggle").click(function(e) {
