--- a/variables.html
+++ b/variables.html
@@ -76,8 +76,8 @@
                         <p>Before a variable can be used, it must be <em>declared</em>. Declaring variables in Java is very easy. The following is an example declaration of a variable <code>x</code> that contains a whole number:<br></p>
                         <code>int x;</code>
                         <p>That's it! <br>In Java, this small statement tells the computer that <code>x</code> will <em>always</em> contain an Integer, or <code>int</code>. As a general rule, <strong>Once a variable's type has been declared, it may not be changed.</strong></p>
-                        <h3 id="instantiating">Instantiating A Variable</h3>
-                        <p>Obviously, a variable without any value really has no purpose, and simply declaring a variable does not give it a usable value (though there are <a href="otherlinks.html#defvals">default values</a> for some datatypes). To fix this, we must <strong>instantiate</strong> a variable. <strong>Instantiation</strong> gives the variable its value and prepares it to be used in the program.</p>
+                        <h3 id="instantiating">Initializing A Variable</h3>
+                        <p>Obviously, a variable without any value really has no purpose, and simply declaring a variable does not give it a usable value (though there are <a href="otherlinks.html#defvals">default values</a> for some datatypes). To fix this, we must <strong>initialize</strong> a variable. <strong>Initialization</strong> gives the variable its value and prepares it to be used in the program. This is most often done with the use of a <a href="objects.html#constructors"><strong>constructor</strong> or <strong>initializer</strong>.</a></p>
                         <h3>Types of variables</h3>
                         <h4 id="primitivetypes">Primitive Types</h4>
                         <p>There are infinitely many types of Variables, but the few that you should be most familiar with are the <strong>primitive types</strong>. There are a few primitive types, but the ones that will arise most often include:</p>
@@ -89,7 +89,7 @@
                         <div style="padding:4px"></div>
                         <p>Each of these types represents a different form that a variable can take, and that are <em>built-in</em> to the Java language by default.</p>
                         <h4>Objects</h4>
-                        <p>Any <a href="objects.html">classes</a> created in the program can be <strong>Instantiated</strong> and stored inside a variable. For example, say we have a <code>Game</code> class, and every time the player clicks a button on screen, we would like to create a <em>new</em> instance of the <code>Game</code> to be played.</p>
+                        <p>Any <a href="objects.html">classes</a> created in the program can be <strong>initialized</strong> and stored inside a variable. For example, say we have a <code>Game</code> class, and every time the player clicks a button on screen, we would like to create a <em>new</em> instance of the <code>Game</code> to be played.</p>
                         <p>To assign a new instance of the <code>Game</code> class to a variable, we would simply type</p>
                         <code>Game myGame = new Game();</code>
                         <div style="padding:4px"></div>
