--- a/objects.html
+++ b/objects.html
@@ -55,6 +55,18 @@
                     <a href="objects.html" style="background-color:white;color:black;">Objects</a>
                 </li>
                 <li>
+                    <a  href="#constructors" style="background-color:rgba(128, 128, 128, 0.4);" id="constmenu">Constructors</a>
+                </li>
+                <li>
+                    <a  href="#inheritance" style="background-color:rgba(128, 128, 128, 0.4);" id="inheritmenu">Inheritance</a>
+                </li>
+                <li>
+                    <a  href="#interfaces" style="background-color:rgba(128, 128, 128, 0.4);" id="intmenu">Interfaces</a>
+                </li>
+                <li>
+                    <a  href="#abstclasses" style="background-color:rgba(128, 128, 128, 0.4);" id="abstmenu">Abstract Classes</a>
+                </li>
+                <li>
                     <a href="otherlinks.html">Other</a>
                 </li>
                 <li>
@@ -97,6 +109,15 @@
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;this.topSpeed = top;<br>
                         }</code>
                         <p>You can see the assignment statement inside the constructor. The constructor works just like any other method in Java, but the computer will recognize a call to a constructor as an instruction to make a <code>new</code> version of that object, and allocate it some memory in RAM.</p>
+                        <h1 id="inheritance">Inheritance</h1>
+                        <p>Inheritance is a very important concept to grasp in Object-Oriented Programming. Inheritance is one of the main ways different objects within a program that are similar can use shared code without having to write anything extra.</p>
+                        <h2 id="interfaces">Interfaces</h2>
+                        <h3>About Interfaces</h3>
+                        <p><strong>Interfaces</strong> are quick and easy ways to ensure that multiple types of classes all have the same exact methods as one another. Inside an interface, </p>
+                        <h3>Declaring an Interface</h3>
+                        <code>public interface Name {</code>
+                        <p>Declaring an interface is very similar to declaring a class. Instead of the<code>class</code> identifier, however, is the <code>interface</code> identifier, telling the computer that this is not a class.</p>
+                        <h2 id="abstclasses">Abstract Classes</h2>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle" style="position:fixed; bottom:20px; right:20px;">Toggle Menu</a>
                     </div>
                 </div>
