--- a/otherlinks.html
+++ b/otherlinks.html
@@ -69,7 +69,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Other/Help</h1>
-                        <h3 id="defvals">Default Java Values</h3>
+                        <span><h3 id="defvals">Default Java Values</h3>
                         <table border="1" style="width:25%" class="table">
                             <tr align="center">
                             <td><strong>Type</strong></td>
@@ -111,9 +111,14 @@
                             <td>false</td>		
                           </tr>
                         </table>
-                            
-                        <p>Thank you to <a href="http://startbootstrap.com/">Start Bootstrap</a> for the theme.</p>
+                        </span>
+                        <h3 id="links">Helpful Links</h1>
+                        <a href="http://docs.oracle.com/javase/7/docs/api/">Official Oracle Java Documentation</a><br>
+                        <a href="https://www.udacity.com/course/intro-to-java-programming--cs046">Beginning Java - Udacity</a><br>
+                        <a href="http://en.wikipedia.org/wiki/Java_(programming_language)">Wikipedia page about Java</a>
+                        <br><br><p>Thank you to <a href="http://startbootstrap.com/">Start Bootstrap</a> for the theme.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle" style="position:fixed; bottom:20px; right:20px;">Toggle Menu</a>
+
                     </div>
                 </div>
             </div>
